assets/css/global-nav.css
:root {
    --nav-height: 48px;
    --nav-gap-x: 16px;
    --nav-bg-close: var(--_theme---global-nav--background-close);
    --nav-bg-open: var(--_theme---global-nav--background-open);
    --nav-panel-bg: #fff;
    --nav-border: #e6e6e6;
    --nav-width: 90rem;
}

.g_header {
    background-color: var(--nav-bg-close);
    transition: background-color 0.15s ease;
    width: 100%;
    position: fixed;
    z-index: 50;
}

.g_header:has(details[open] .g_nav_megamenu),
.g_header:has(.g_nav_menu[open]) {
  background-color: var(--nav-bg-open);
}

.g_nav {
    max-width: 90rem;
    width: 100%;
    display: flex;
    align-items: stretch;
    justify-content: space-between;
    margin: 0 auto;
    
}

.g_nav_menu {
    display: contents;
}

.g_nav_menu_list {
    display: flex;
    justify-content: space-around;
    flex-grow: 1;
}

.dev_nav_buttons {
    display: flex;
    gap: var(--nav-gap-x);
}

.g_nav_item {
    flex-shrink: 0;
    flex-grow: 0;
    height: 100%;
    display: flex;
    align-items: center;
    justify-content: center;
    padding: 0.375rem 12px;
    color: var(--_brand---tintsshades--brand-500);
    position: relative;
    z-index: 2;
}

.g_nav_item:hover {
    color: var(--_theme---color--text);
}

.g_nav_logo {
    display: block;
    height: 2.25rem;
}

.g_nav_icon {
    width: 1.75rem;
    height: 1.75rem;
    pointer-events: none;
}

.g_nav_menu details {
    display: contents;
}

.g_nav_megamenu {
    background-color: rgba(22, 22, 23, 1);;
    /* background-color: inherit; */
    /* backdrop-filter: blur(10px); */
    position: absolute;
    top: 100%;
    left: 0;
    right: 0;
    z-index: 10;
}

#g_nav_btn_mobile_menu {
    display: none;
}

.g_header::before,
.g_backdrop_blur::before {
    content: '';
    position: absolute;
    inset: 0;
    z-index: -1;
    -webkit-backdrop-filter: blur(10px);
    backdrop-filter: blur(10px);
}

.g_backdrop_blur_full::before {
    content: '';
    position: fixed;
    inset: 0;
    z-index: -1;
    -webkit-backdrop-filter: blur(10px);
    backdrop-filter: blur(10px);
    /* pointer-events: none; */
}

@media (max-width: 1040px) {
    #g_nav_btn_mobile_menu {
        display: block;
    }

    .g_nav_menu {
        display: none;
        background-color: rgba(22, 22, 23);
        position: absolute;
        height: calc(100vh - var(--global-nav--height));
        top: 100%;
        left: 0;
        right: 0;
        padding-top: 32px;
    }

    .g_nav_menu[open] {
        display: block;
    }

    .g_nav_menu_list {
        display: flex;
        flex-direction: column;
        align-items: stretch;
        justify-content: start;
        gap: var(--nav-gap-x);
        height: 100%;
    }

    .g_nav_menu details {
        display: block;
    }

    .g_nav_menu .g_nav_megamenu {
        position: static;
    }

    .g_nav_menu :is(a, summary) {
        justify-content: left;
        font-size: 24px;
    }
}

